--- a/Trigger/app/src/main/AndroidManifest.xml
+++ b/Trigger/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:required="true" />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:allowBackup="true"
